NetBSD Problem Report #36626

From jukka+moray@salmi.ch  Tue Jul 10 21:03:05 2007
Return-Path: <jukka+moray@salmi.ch>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 1CC2B63B874
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 10 Jul 2007 21:03:05 +0000 (UTC)
Message-Id: <20070710194642.AA7AC9E@moray.salmi.ch>
Date: Tue, 10 Jul 2007 21:46:42 +0200 (CEST)
From: j+nbsd@2007.salmi.ch
To: gnats-bugs@NetBSD.org
Subject: shutdown(8) fails to compile if DEBUG is defined
X-Send-Pr-Version: 3.95

>Number:         36626
>Category:       bin
>Synopsis:       shutdown(8) fails to compile if DEBUG is defined
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    jnemeth
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jul 10 21:05:00 +0000 2007
>Closed-Date:    Tue Jul 17 19:14:10 +0000 2007
>Last-Modified:  Sat May 30 06:50:05 +0000 2009
>Originator:     Jukka Salmi
>Release:        NetBSD 4.99.22
>Organization:

>Environment:
System: NetBSD moray.salmi.ch 4.99.22 NetBSD 4.99.22 (MORAY.APM) #0: Sun Jul 1 21:35:18 CEST 2007 build@moray.salmi.ch:/b/build/nbsd/c/i386/sys/arch/i386/compile/MORAY.APM i386
Architecture: i386
Machine: i386
>Description:
src/sbin/shutdown fails to compile if DEBUG is defined.
>How-To-Repeat:
Define DEBUG and try to build src/sbin/shutdown.
>Fix:
Index: sbin/shutdown/shutdown.c
===================================================================
RCS file: /cvsroot/src/sbin/shutdown/shutdown.c,v
retrieving revision 1.47
diff -u -p -r1.47 shutdown.c
--- sbin/shutdown/shutdown.c	14 Mar 2007 03:52:28 -0000	1.47
+++ sbin/shutdown/shutdown.c	10 Jul 2007 19:43:55 -0000
@@ -362,7 +362,9 @@ die_you_gravy_sucking_pig_dog(void)
 	if (doreboot || dohalt) {
 		const char *args[16];
 		const char **arg, *path;
+#ifndef DEBUG
 		int serrno;
+#endif

 		arg = &args[0];
 		if (doreboot) {

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: bin-bug-people->jnemeth
Responsible-Changed-By: jnemeth@netbsd.org
Responsible-Changed-When: Tue, 10 Jul 2007 23:53:07 +0000
Responsible-Changed-Why:
I'm fixing it (patch applied, need to do pullups)...


From: John Nemeth <jnemeth@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: PR/36626 CVS commit: src/sbin/shutdown
Date: Tue, 10 Jul 2007 23:50:39 +0000 (UTC)

 Module Name:	src
 Committed By:	jnemeth
 Date:		Tue Jul 10 23:50:39 UTC 2007

 Modified Files:
 	src/sbin/shutdown: shutdown.c

 Log Message:
 PR/36626 - Jukka Salmi -- fails to compile if DEBUG is defined


 To generate a diff of this commit:
 cvs rdiff -r1.47 -r1.48 src/sbin/shutdown/shutdown.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Liam J. Foy" <liamjfoy@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: PR/36626 CVS commit: [netbsd-4] src/sbin/shutdown
Date: Tue, 17 Jul 2007 09:50:49 +0000 (UTC)

 Module Name:	src
 Committed By:	liamjfoy
 Date:		Tue Jul 17 09:50:49 UTC 2007

 Modified Files:
 	src/sbin/shutdown [netbsd-4]: Makefile shutdown.c

 Log Message:
 Pull up following revision(s) (requested by jnemeth in ticket #771):
 	sbin/shutdown/Makefile: revision 1.9
 	sbin/shutdown/shutdown.c: revision 1.47
 	sbin/shutdown/shutdown.c: revision 1.48
 - sprinkle static
 - pass WARNS=4 and lint
 - use size_t/time_t where appropriate
 - get/setprogname()
 - before executing rc.shutdown, set the real user id to 0, because shutdown
   scripts may depend on it (for example su depends on being root).
 - use warn instead of perror, and make sure we use the right errno.

 PR/36626 - Jukka Salmi -- fails to compile if DEBUG is defined


 To generate a diff of this commit:
 cvs rdiff -r1.8 -r1.8.30.1 src/sbin/shutdown/Makefile
 cvs rdiff -r1.46 -r1.46.4.1 src/sbin/shutdown/shutdown.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: jnemeth@netbsd.org
State-Changed-When: Tue, 17 Jul 2007 19:14:10 +0000
State-Changed-Why:
fixed -- patch applied and pulled-up, thanks


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/36626 CVS commit: [netbsd-3] src/sbin/shutdown
Date: Sat, 30 May 2009 06:45:39 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sat May 30 06:45:39 UTC 2009

 Modified Files:
 	src/sbin/shutdown [netbsd-3]: Makefile shutdown.c

 Log Message:
 Pull up following revision(s) (requested by jnemeth in ticket #2019):
 	sbin/shutdown/Makefile: revision 1.9
 	sbin/shutdown/shutdown.c: revision 1.45-1.48
 Move WARNS=3 to the Makefile.inc, and add a little const to the remaining
 programs that did not compile before.
 PR/31531: Takahiro Kambe: shutdown(8) quietly exit if execed from login shell
 - sprinkle static
 - pass WARNS=4 and lint
 - use size_t/time_t where appropriate
 - get/setprogname()
 - before executing rc.shutdown, set the real user id to 0, because shutdown
   scripts may depend on it (for example su depends on being root).
 - use warn instead of perror, and make sure we use the right errno.
 PR/36626 - Jukka Salmi -- fails to compile if DEBUG is defined


 To generate a diff of this commit:
 cvs rdiff -u -r1.8 -r1.8.20.1 src/sbin/shutdown/Makefile
 cvs rdiff -u -r1.44 -r1.44.2.1 src/sbin/shutdown/shutdown.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.