PR/36626 - Jukka Salmi -- fails to compile if DEBUG is defined